tests/ui/const-generics/min_adt_const_params/const_param_ty-on-adt-without-adt-gate.stderr
error: the trait `ConstParamTy` may not be implemented for this struct
  --> $DIR/const_param_ty-on-adt-without-adt-gate.rs:14:24
   |
LL | impl ConstParamTy_ for Fumo {}
   |                        ^^^^ struct fields are less visible than the struct

error: aborting due to 1 previous error

